MD - make classic theme frame colors on Linux/Win the same as CrOS. (When using OpaqueBrowserFrameView)

BUG=594076

Review URL: https://codereview.chromium.org/1798323002

Cr-Commit-Position: refs/heads/master@{#381149}

Former-commit-id: a4db9673a67b98e1bdd7adeb1a866b3e940593ba